refactor: 통계 서비스 API 구조 개편 및 컨트롤러 정리